@@ -1,4 +1,8 @@
 2008-07-15  Nicolas Bruguier  <gandalfn@club-internet.fr>
+
+    * src/ccm-window.c: Damage screen region covered by window on unmap.
+    
+2008-07-15  Nicolas Bruguier  <gandalfn@club-internet.fr>
     
     * src/ccm-screen.c: Consider first window opaque viewable which covered
                         all screen as desktop type window.
